# tokenpak

./: .bandit-baseline.json  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .importlinter  .pre-commit-config.yaml  404.html  API.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v1.0.md  CNAME  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  LICENSE_COMMERCIAL.md  MANIFEST.in  MERGE_CONFLICT_RESOLUTION.md  Makefile  NOTICE  PM_GTM_GAP_ANALYSIS_2026-04-07.md  RATE_LIMIT_IMPLEMENTATION.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.md  ROADMAP.md  ROUTING_IMPL_CHECKLIST.md  SECURITY.md  SQLITE_RETRIEVAL.md  STATUS.md  SUPPORT.md  TEST_AUDIT.md  (+67 more)
.changeset/: api-snapshot-reconcile.md  api-snapshot-source-provenance.md  claude-hook-accounting-truth.md  codex-parallel-session-isolation.md  companion-package-data-wheel.md  context-window-registry.md  launcher-permission-defaults.md  memoryguard-host-optimizer.md  no-fabricated-model-default.md  p5c-release-gate-hardening.md  pro-upgrade-cli-api-snapshot.md  proxy-shutdown-telemetry-record.md  proxy-stop-reason-capture.md  proxy-transport-reliability-api-snapshot.md  stateful-api-unsupported-error.md  tcm09-tip-cache-status.md  telemetry-store-coherence.md  v1.9.0-release-surface-alignment.md  v1.9.2-session-handoff.md  v1102-snapshot-ci-parity-regen.md  v1120-api-snapshot-additive-symbols.md  v1130-services-api-snapshot.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.3.md  RELEASE_NOTES_v1.3.4.md  RELEASE_NOTES_v1.3.5.md  RELEASE_NOTES_v1.3.6.md  RELEASE_NOTES_v1.3.7.md  RELEASE_TEMPLATE.md  dependabot.yml  gate-inventory.yml  public-promotion-hold.txt
.tokenpak/: elo_ratings.json  registry.db  routing_ledger.db
API/: index.html
COMPATIBILITY/: index.html
COMPONENT-DIAGRAM/: index.html
COMPRESSION_TUNING/: index.html
CONTRIBUTING/: index.html
DOCKER/: index.html
EXAMPLES/: index.html
FAQ/: index.html
LATENCY/: index.html
MEMORY-GUARD/: index.html
OSS-PRO-BOUNDARY/: index.html
PERFORMANCE/: index.html
QUICKSTART/: index.html
SAVINGS/: index.html
SECURITY/: index.html
TESTING/: index.html
_archive/: proxy_v4.py.bak-archived-2026-04-09  proxy_v4.py.bak.license-gated-2026-04-09
adapters/: index.html
api-reference/: index.html
architecture/: index.html
artifacts/: benchmark-summary.json
benchmarks/: conftest.py  results.md  test_performance.py
cli-reference/: index.html
comparison/: index.html
config/: rate-limits.yaml  tokenpack.config.json.example
configs/: anthropic-only.yaml  local-ollama.yaml  mixed-routing.yaml  openai-only.yaml  privacy-first.yaml  team-internal.yaml
configuration/: index.html
coverage/: class_index.html  index.html  status.json  z_0684f4833fd68ca8___init___py.html  z_0684f4833fd68ca8_cooldown_manager_py.html  z_0684f4833fd68ca8_oauth_manager_py.html  z_0ae749ca8afc3caa___init___py.html  z_0ae749ca8afc3caa_formatter_py.html  z_0ae749ca8afc3caa_middleware_py.html  z_0ae749ca8afc3caa_parser_py.html  z_0ae749ca8afc3caa_proxy_py.html  z_0c70b3a2b1cf2fce___init___py.html  z_0c70b3a2b1cf2fce_prefix_registry_py.html  z_0c70b3a2b1cf2fce_registry_py.html  z_0c70b3a2b1cf2fce_semantic_cache_py.html  z_0c70b3a2b1cf2fce_stable_cache_py.html  z_0c70b3a2b1cf2fce_telemetry_py.html  z_0c70b3a2b1cf2fce_volatile_cache_py.html  z_0e85f638d6e1a720___init___py.html  z_0e85f638d6e1a720_base_py.html  z_0e85f638d6e1a720_claude_cli_py.html  z_0e85f638d6e1a720_generic_py.html  z_0e85f638d6e1a720_openclaw_py.html  z_0e85f638d6e1a720_registry_py.html  z_0f6daa1636160216___init___py.html  z_0f6daa1636160216_extractor_py.html  z_0f6daa1636160216_models_py.html  z_0f6daa1636160216_patterns_py.html  z_11e32ac9b16cac4b___init___py.html  z_11e32ac9b16cac4b_builder_py.html  z_1baec05c32935240___init___py.html  z_1baec05c32935240_alias_compressor_py.html  z_1baec05c32935240_canon_py.html  z_1baec05c32935240_dedup_py.html  z_1baec05c32935240_dictionary_py.html  z_1baec05c32935240_directives_py.html  z_1baec05c32935240_fidelity_tiers_py.html  z_1baec05c32935240_instruction_table_py.html  z_1baec05c32935240_pipeline_py.html  z_1baec05c32935240_query_rewriter_py.html  (+559 more)
coverage-snapshot-2026-03-29/: index.html
dashboard/: index.html
data/: sample_3race_fixture.xml
demo/: index.html
deployment/: index.html
deployments/: README.md
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
docs/: ADAPTER_COVERAGE_MATRIX_2026-03-09.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  BETA_ONBOARDING.md  CACHE_ARCHITECTURE.md  CACHE_DASHBOARD.md  CACHE_EFFICIENCY_RETROSPECTIVE.md  CACHE_TTL_ANALYSIS.md  CACHE_VALIDATION_REPORT.md  CI_HEALTH_2026-03-09.md  CNAME  COMPATIBILITY.md  COMPONENT-DIAGRAM.md  COMPRESSION_TUNING.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  EXAMPLES.md  FAQ.md  HEALTH_AUDIT_2026-03-09.md  INDEX.md  INGEST-API-INTEGRATION.md  INTEGRATION_TEST_SUITE.md  (+80 more)
tokenpak/adapters/crewai/: README.md  __init__.py  context.py  crew.py  handoff.py  pyproject.toml
tokenpak/adapters/crewai/examples/: quickstart.py
tokenpak/adapters/langchain/: __init__.py  adapter.py  pyproject.toml
tokenpak/adapters/langchain/examples/: __init__.py  basic_rag.py
tokenpak/adapters/langchain/langgraph/: __init__.py
tokenpak/adapters/langchain/tests/: test_context.py
tokenpak/adapters/llamaindex/: README.md  __init__.py  converters.py  fusion.py  index.py  pyproject.toml  query_engine.py  synthesizer.py
tokenpak/adapters/llamaindex/examples/: quickstart.py
tokenpak/adapters/llamaindex/tests/: __init__.py  test_fusion.py  test_synthesizer.py
tokenpak/sdk/autogen/: README.md  __init__.py  assistant.py  context.py  groupchat.py  message.py  pyproject.toml
tokenpak/sdk/autogen/examples/: __init__.py
tokenpak/sdk/autogen/tests/: __init__.py  test_assistant.py
(+3241 files in other folders)
