[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-tokenpak"
version = "0.1.0"
description = "TokenPak integration for CrewAI - context compression for multi-agent workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "TokenPak", email = "hello@tokenpak.dev"}]
keywords = ["crewai", "tokenpak", "agents", "multi-agent", "context", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["tokenpak>=0.1.0"]

[project.optional-dependencies]
crewai = ["crewai>=0.1.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/tokenpak/crewai-tokenpak"
Specification = "https://github.com/tokenpak/tokenpak-spec"

[tool.pytest.ini_options]
testpaths = ["tests"]
