[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-tokenpak"
version = "0.1.0"
description = "TokenPak integration for LangChain - context compression for RAG and agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "TokenPak", email = "hello@tokenpak.dev"}]
keywords = ["langchain", "tokenpak", "rag", "context", "compression", "tokens", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["tokenpak>=0.1.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/tokenpak/langchain-tokenpak"
Specification = "https://github.com/tokenpak/tokenpak-spec"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
