[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-tokenpak"
version = "0.1.0"
description = "TokenPak integration for LlamaIndex — automatic context compression for RAG pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "TokenPak Team" }
]
keywords = ["llamaindex", "llama-index", "rag", "compression", "context", "tokens"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tokenpak-sdk>=0.1.0",
  "llama-index-core>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
"Homepage" = "https://github.com/tokenpak/llamaindex-tokenpak"
"Documentation" = "https://tokenpak.ai/integrations/llamaindex"
"Repository" = "https://github.com/tokenpak/llamaindex-tokenpak.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["llamaindex_tokenpak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
