[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-tokenpak"
version = "0.1.0"
description = "TokenPak integration for AutoGen - context compression for multi-agent conversations"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{name = "TokenPak", email = "hello@tokenpak.ai"}]
keywords = ["autogen", "tokenpak", "agents", "multi-agent", "context", "compression", "microsoft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["tokenpak>=0.1.0"]

[project.optional-dependencies]
autogen = ["pyautogen>=0.2.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/tokenpak/autogen-tokenpak"
Specification = "https://github.com/tokenpak/tokenpak-spec"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
